feat: Work on concepts section

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -12,7 +12,7 @@
 علاوه بر این باید افزایش هزینه و تاخیر ناشی از آموزش کارکنان برای کار با تجهیزات جدید را نیز در نظر گرفت.
 همچنین اغلب کارایی و قابلیت‌های سخت افزارها و نرم افزارهای خاص منظوره که از سمت فروشندگان تجهیزات ارائه می‌شود محدود به انتخاب‌های فروشندگان است
 و خریداران تجهیزات قادر به سفارشی‌سازی تجهیزات خریداری شده نیستند.
-بدتر این ‍که هر چه نوآوری سرویس‍‌ها و فناوری شتاب بیشتری می‍گیرد، چرخه عمر سخت‌افزارها کوتاه‍تر می‍شود که مانع از ایجاد نوآوری در سرویس‌های شبکه می‌شود[2].
+بدتر این ‍که هر چه نوآوری سرویس‌ها و فناوری شتاب بیشتری می‍گیرد، چرخه عمر سخت‌افزارها کوتاه‍تر می‍شود که مانع از ایجاد نوآوری در سرویس‌های شبکه می‌شود[2].
 
 \پاراگراف{}
 در روش سنتی استقرار سرویس شبکه، ترافیک کاربر باید از تعدادی کارکرد شبکه به ترتیب معینی عبور کند تا یک مسیر پردازش ترافیک ایجاد شود.
@@ -480,14 +480,28 @@ VNF-FG
 \قسمت{مدیریت شبکه و سرویس بدون لمس}
 
 \زیرقسمت{مقدمه}
+\پاراگراف{}
 معماری \متن‌لاتین{ZSM} به گونه‌ای طراحی شده است که مدیریت تمام خودکار شبکه و سرویس‌ها را در یک محیط چند دامنه‌ای که شامل عملیات در محدوده‌های قانونی است را پشتیبانی کند.
 معماری به صورت ماژولار (ساخته شده از سرویس‌های مستقل و کافی)، قابل گسترش (اجازه سرویس‌های جدید و قابلیت‌های نو)، مقیاس‌پذیر (فراهم کردن استقرار مستقل و مقیاس مستقل برای سرویس‌ها در جهت تحمل بار مدیریتی)
 و مقاوم در برابر خطاها (سرویس‌ها به گونه‌ای طراحی شده‌اند که با خرابی‌های زیرساخت یا سرویس‌های مشکلی نداشته باشند).
 لازم به ذکر است که تمام قابلیت‌های مقیاس‌پذیری، تحمل خطا و گسترش‌پذیری نتیجه طراحی ماژولار می‌باشند.
 
 \زیرقسمت{معماری}
+\پاراگراف{}
 معماری \متن‌لاتین{ZSM} در جهت پشتیبانی دغدغه‌های مدیریتی به تعداد دامنه مدیریتی تقسیم می‌شود. سرویس‌های دیتا مشترک اجازه می‌دهند پردازش داده از ذخیره‌سازی آن جدا شود.
-این امر دسترسی به داده‌ها و نشر بین دامنه‌ای آن‌ها را ساده‌تر می‌کند.
+این امر دسترسی به داده‌ها و نشر بین دامنه‌ای آن‌ها را ساده‌تر می‌کند. این داده‌ها می‌توانند در سرویس‌های دامنه‌ای یا انتها به انتها برای حلقه‌های کنترلی بسته مبتنی بر هوش مصنوعی مورد استفاده قرار بگیرند.
+سامانه‌های تصمیم‌گیری خودکار بر پایه قوانین و سیاست‌ها کنترل می‌شوند.
+سرویس‌های تعریف شده در یک دامنه یا سرویس‌های انتها به انتها در کنار یکدیگر در گروه‌های منطقی قرار می‌گیرند. این گروه‌های سرویس‌های مدیریتی را در قالب رابط‌های مدیریتی فراهم می‌کنند.
+سرویس‌ها می‌توانند با استفاده رویه‌های تقاضا و پاسخ یا انتشار و جذب مورد استفاده قرار بگیرند.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{./fig/zsm-arch.png}
+  \caption{معماری سطح بالای دامنه‌های مدیریتی \متن‌لاتین{ZSM}}
+\end{figure}
+
+\پاراگراف{}
+
 
 \قسمت{هوش تجربی شبکه}
 
