feat: Work on concepts section

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -501,6 +501,8 @@ VNF-FG
 \end{figure}
 
 \پاراگراف{}
+هوش مصنوعی نقش قدرتمندی در کارکردهای خود مدیریتی ایفا می‌کند اما استفاده از هوش مصنوعی در \متن‌لاتین{ZSM} به وسیله حدود و ریسک‌های بسیاری محدود شده است.
+از جمله‌ی این محدودیت‌ها می‌توان به محدودیت‌های قانونی، عملکرد کاملا خودکار سیستم و \نقاط‌خ اشاره کرد.
 
 
 \قسمت{هوش تجربی شبکه}
