feat: update proposal

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -98,3 +98,4 @@
 \پاراگراف{}
 مساله پیش‌بینی ترافیک در بیشتر مسائل شبکه‌ای مطرح است و برای آن راه‌حل‌های زیادی ارائه شده است که از جمله آن می‌توان به روش‌هایی بر پایه شبکه‌های عصبی،
 شبکه‌های بازگشتی حفاظه کوتاه مدت بلند\پانویس{Long Short-Term Memory Recurrent Network} و \نقاط‌خ
+یکی از قدیمی‌ترین این روش‌ها \متن‌لاتین{ARIMA} می‌باشد.
