--- a/problem/problem.tex
+++ b/problem/problem.tex
@@ -30,6 +30,6 @@
 \پاراگراف{}
 در مساله دوم قصد داریم سرویس‌های جایگذاری شده را بعد از یک بازه زمانی دوباره جایگذاری کنیم اما بحث اصلی در این رابطه استفاده از پیش‌بینی ترافیک لینک‌ها است.
 در واقع متقاضیان سرویس هرگز در رابطه با ترافیک دقیق سیستمشان اطلاعی ندارد. در پیش‌بینی ترافیک دو بحث معیار مطرح است یکی ساختار مکانی و دیگری زمان می‌باشد.
-برای حل این مساله نیاز است این دو معیار توامان مدنظر قرار گرفته شوند و از این رو از بحث \متن‌لاتین{Spectral Graphs} و ... استفاده می‌کنیم.
+برای حل این مساله نیاز است این دو معیار توامان مدنظر قرار گرفته شوند و از این رو از بحث \متن‌لاتین{Spectral Graphs} و \نقاط‌خ استفاده می‌کنیم.
 در این مساله نیاز به بحث‌های یادگیری ماشین نیز وجود دارد. در واقع در این مساله سعی خواهیم با استفاده از یک سری زمانی از اطلاعات که از شبکه بدست آمده است حجم ترافیک لینک‌ها را پیش‌بینی کنیم.
 در صورتی که برای سرویس‌ها از VNF-FG استفاده کنیم در این مرحله کار سخت‌تری برای پیش‌بینی ترافیک خواهیم داشت.
