feat: improve concepts

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -532,7 +532,9 @@ VNF-FG
 \قسمت{نتیجه‌گیری}
 
 \پاراگراف{}
-در این بخش معماری های NFV و SFC به صورت کامل شرح داده شد و اجزای آن ها و مسائل تحقیقاتی موجود در هر یک  از این معماری ها بررسی شد. همانگونه که بیان شد، معماری NFV بر مجازی سازی کارکردها تمرکز دارد.یک سرویس در معماری NFV با استفاده از NSD توصیف می شود که شامل VNF-FG، VNF ها و لینک های توصیف کننده ارتباطات بین VNF ها است. معماری SFC به ایجاد زنجیره پویا از کارکردها تمرکز دارد.
+در این بخش معماری‌های \متن‌لاتین{NFV} و \متن‌لاتین{SFC} به صورت کامل شرح داده شد و اجزای آن‌ها و مسائل تحقیقاتی موجود در هر یک از این معماری‌ها بررسی شد.
+همانگونه که بیان شد، معماری \متن‌لاتین{NFV} بر مجازی سازی کارکردها تمرکز دارد. یک سرویس در معماری \متن‌لاتین{NFV} با استفاده از \متن‌لاتین{NSD} توصیف می‌شود که شامل \متن‌لاتین{VNF}، \متن‌لاتین{VNF-FG}ها و لینک‌های توصیف کننده
+ارتباطات بین \متن‌لاتین{VNF}ها است. معماری \متن‌لاتین{SFC} به ایجاد زنجیره پویا از کارکردها تمرکز دارد.
 
 \پاراگراف{}
 یک زنجیره کارکرد توسط یک گراف SFC توصیف می شود که به صورت مجموعه مرتب از کارکردها که ترافیک باید با ترتیب مشخصی از آن ها عبور کند توصیف می شود. این معماری تاکیدی بر مجازی سازی کارکردها ندارد. همچنین برای مسیریابی ترافیک در این معماری نیز می توان از سرآیند NSH استفاده کرد.همانگونه که بیان شد در حقیقت این دو معماری مکمل یکدیگر هستند و یک گراف SFC را می توان توسط یک VNF-FG معادل نمایش داد.
