feat: update references

--- a/problem/references.bib
+++ b/problem/references.bib
@@ -36,3 +36,17 @@
   title = {An adaptive scaling mechanism for managing performance variations in network functions virtualization: A case study in an {NFV}-based {EPC}},
   booktitle = {2017 13th International Conference on Network and Service Management ({CNSM})}
 }
+
+@article{Wang2019,
+  doi = {10.1007/s11036-019-01423-3},
+  url = {https://doi.org/10.1007/s11036-019-01423-3},
+  year = {2019},
+  month = dec,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {26},
+  number = {2},
+  pages = {716--725},
+  author = {Yuqing Wang and Dingde Jiang and Liuwei Huo and Yong Zhao},
+  title = {A New Traffic Prediction Algorithm to Software Defined Networking},
+  journal = {Mobile Networks and Applications}
+}
