--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -511,18 +511,19 @@ VNF-FG
 
 \پاراگراف{}
 کارگروه \متن‌لاتین{ETSI ENI} در حال طراحی یک معماری مدیریت شبکه شناختی\پانویس{Cognitive Network Management}
-بر پایه حلقه بسته\پانویس{closed-loop} مکانیزم‌های هوش‌مصنوعی بر اساس سیاست‌های آگاه به متن\پانویس{Context-aware} و مبتنی بر داده‌ها
+بر پایه حلقه بسته\پانویس{closed-loop}، مکانیزم‌های هوش‌مصنوعی بر اساس سیاست‌های آگاه به متن\پانویس{Context-aware} و مبتنی بر داده‌ها
 برای بهبود تجربه اپراتورهای شبکه می‌باشند.
 این معماری بر پایه حلقه کنترلی، نظارت--ارزیابی--تصمیم--عمل می‌باشد.
 این پروژه برای عملکردهای متنوع که مدیریت زیرساخت، عملیات‌های شبکه،
 هماهنگی سرویس‌ها و تضمین آن‌ها را پوشش می‌دهند،‌ تعریف شده است.
+\مرجع{Benzaid2020}
 
 \زیرقسمت{در قیاس با مدیریت شبکه و سرویس بدون لمس}
 
 \پاراگراف{}
-از بین کارکردهای \متن‌لاتین{ENI} آنچه به \متن‌لاتین{ZSM} مرتبط است
+از بین کارکردهای \متن‌لاتین{ENI} آنچه به \متن‌لاتین{ZSM} مرتبط است،
 می‌توان به مدیریت هوشمند قطعه‌بندی شبکه، شناسایی و پیش‌بینی خطا در شبکه
-و تظمین نیازمندی‌های سخت سرویس اشاره کرد.
+و تضمین نیازمندی‌های سخت‌گیرانه سرویس اشاره کرد.
 
 \پاراگراف{}
 برخلاف \متن‌لاتین{ZSM} که بر تکنیک‌های خودکارسازی، مدیریت انتها به انتها سرویس و
