feat: improve related works

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -32,7 +32,7 @@
 \زیرقسمت{انواع مسائل تحقیقاقی}
 
 \پاراگراف{}
-همانگونه که پیشتر در بحث مسائل تحقیقاتی در معماری های SFC و NFV اشاره شد به طول کلی سه مسئله اصلی در این معماری ها وجود دارد که ترکیب های مختلف این مسائل با یکدیگر نیز می تواند به عنوان مسائل جدید مطرح گردد:
+همانگونه که پیشتر در بحث مسائل تحقیقاتی در معماری‌های SFC و NFV اشاره شد به طول کلی سه مسئله اصلی در این معماری‌ها وجود دارد که ترکیب‌های مختلف این مسائل با یکدیگر نیز می تواند به عنوان مسائل جدید مطرح گردد:
 
 \شروع{فقرات}
 \فقره ساخت زنجیره کارکرد در معماری SFC یا گراف VNF-FG در معماری NFV
@@ -70,6 +70,10 @@
 اگر در طول زمان انتساب کارکردها به ماشین مجازی نیز تغییر کند، این مسئله با مسئله تخصیص منابع ترکیب می شود.
 در این رساله ما صرفا بر استقرار سرویس و تخصیص منابع تمرکز خواهیم کرد و در آن بحث اشتراک نمونه را نیز مدنظر قرار خواهیم داد.
 
+\پاراگراف{}
+در بحث مدیریت شبکه و سرویس بدون لمس، می‌توان مسائل مختلفی مطرح کرد که در آن‌ها هدف پیش‌بینی و تصمیم‌گیری‌ها خودکار می‌باشد. از جمله‌ی این مسائل می‌توان به پیش‌بینی ترافیک اشاره کرد.
+برای مدیریت شبکه حجم ترافیک یکی از پارامترهای مهم می‌باشد که پیش‌بینی آن می‌تواند کمک شایانی به تصمیم‌گیری‌های آینده انجام دهد.
+
 \قسمت{باید مشخص شود!}
 
 \پاراگراف{}
@@ -94,6 +98,13 @@
 در \مرجع{Arteaga2017} محققان از یادیگری تقویتی جهت مقیاس‌پذیری و تصمیمات بهتر برای مدیریت تغییرات کارایی استفاده می‌کنند. برای آموزش عامل آن‌ها از \متن‌لاتین{Q Learning}
 استفاده می‌کنند. استفاده از الگوریتم‌های یادگیری ماشین به پروژه‌های تحقیقاتی محدود نبوده و پروژه \متن‌لاتین{5G-PPP} قصد دارد یک چهارچوب مدیریت هوشمند برای شبکه‌های نسل پنجم
 طراحی کند. در کنار همه مراکز استانداردسازی نیست دست به تعریف استاندارد برای مدیریت خودکار شبکه‌ها زده‌اند که از جمله آن‌ها می‌توان به \متن‌لاتین{ENI} و \متن‌لاتین{ZSM} اشاره کرد.
+
+\پاراگراف{}
+در \مرجع{Wang2019} مساله پیش‌بینی ترافیک در یک شبکه \متن‌لاتین{SDN} مورد بحث قرار گرفته است. این مقاله بیان می‌کند پیش‌بینی ترافیک در
+شبکه‌های سنتی امری دشوار بوده است و این در حالی است که شبکه‌های نرم‌افزار بنیان توانایی بیشتری برای این امر دارند. در این تحقیق از اطلاعات لایه
+داده برای جریان‌های شبکه در جهت پیش‌بینی ترافیک بر پایه روش \متن‌لاتین{ARIMA} استفاده می‌شود.
+اطلاعات لایه داده برای جریان‌های ترافیکی با سربار کمتر و دقت بیشتری از روش‌های سنتی در اختیار قرار می‌گیرد که دقت بیشتری به این الگوریتم می‌دهد،
+در ادامه با توجه به ماهیت زمانی ترافیک، بحث سری زمانی نیز در این پژوهش در نظر گرفته شده است.
 
 \پاراگراف{}
 مساله پیش‌بینی ترافیک در بیشتر مسائل شبکه‌ای مطرح است و برای آن راه‌حل‌های زیادی ارائه شده است که از جمله آن می‌توان به روش‌هایی بر پایه شبکه‌های عصبی،
