feat: improve related works

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -41,10 +41,10 @@
 \پایان{فقرات}
 
 \پاراگراف{}
-مسائلی که بر ساخت زنجیره کارکرد در معماری SFC تمرکز دارند، فرض می‌کنند که کاربر ترتیب صریح زنجیره را ذکر نکرده است و صرفا ترتیب جزئی عبور ترافیک از کارکردها بیان شده است.
-به عنوان مثال کاربر بیان می‌کند که زنجیره‌اش شامل سه کارکرد دیواره آتش، NAT و Load Balancer است. ولی ترتیب دقیق آن ها را بیان نکرده و صرفا بیان میکند که Load balancer اخرین کارکرد در زنجیره است.
-در این حالت ممکن است NAT قبل یا بعد از دیواره آتش قرار گیرد که وابسته به شرایط شبکه ممکن است حتی در نمونه های ایجاد شده از کارکردها نیز تاثیر گذار باشد.
-مشابه این شرایط در ایجاد گراف VNF-FG نیز مطرح می‌شود. از آنجایی که زنجیره‌های متفاوت نحوه استقرار متفاوتی دارند، می توان این مسئله را با استقرار سرویس ترکیب کرد.
+مسائلی که بر ساخت زنجیره کارکرد در معماری \متن‌لاتین{SFC} تمرکز دارند، فرض می‌کنند که کاربر ترتیب صریح زنجیره را ذکر نکرده است و صرفا ترتیب جزئی عبور ترافیک از کارکردها بیان شده است.
+به عنوان مثال کاربر بیان می‌کند که زنجیره‌اش شامل سه کارکرد دیواره آتش، \متن‌لاتین{NAT} و \متن‌لاتین{Load Balancer} است. ولی ترتیب دقیق آن ها را بیان نکرده و صرفا بیان میکند که \متن‌لاتین{Load balancer} اخرین کارکرد در زنجیره است.
+در این حالت ممکن است \متن‌لاتین{NAT} قبل یا بعد از دیواره آتش قرار گیرد که وابسته به شرایط شبکه ممکن است حتی در نمونه‌های ایجاد شده از کارکردها نیز تاثیرگذار باشد.
+مشابه این شرایط در ایجاد گراف \متن‌لاتین{VNF-FG} نیز مطرح می‌شود. از آنجایی که زنجیره‌های متفاوت نحوه استقرار متفاوتی دارند، می توان این مسئله را با استقرار سرویس ترکیب کرد.
 
 \پاراگراف{}
 سرویسی که ارتباط کارکردهای آن توسط SFC یا VNF-FG توصیف می‌شود باید در زیرساخت استقرار یابد.
@@ -61,7 +61,7 @@
 در این حالت، آن کارکرد به چهار نمونه انتساب پیدا کرده است و پردازش ترافیک آن توسط چهار نمونه انجام می‌شود.
 
 \پاراگراف{}
-در صورتی که در تعداد نمونه‌هایی که می‌توان برای کارکردها ایجاد کرد محدودیتی وجود داشته باشد، ناچار به زمان بندی در استفاده از آن ها خواهیم بود.
+در صورتی که در تعداد نمونه‌هایی که می‌توان برای کارکردها ایجاد کرد محدودیتی وجود داشته باشد، ناچار به زمان بندی در استفاده از آن‌ها خواهیم بود.
 در این صورت با درنظر گرفتن ماشین مجازی به عنوان یک منبع، می‌توان زمان‌بندی در استفاده آن را تعریف کرد.
 به صورت دقیق تر با اشتراک ماشین‌های مجازی بین چندین کارکرد متفاوت در طول زمان، میتوان سرویس مورد نظر کاربر را برآورده کرد.
 این کار به این صورت انجام می‌شود که کارکردهای متفاوت به یک ماشین مجازی انتساب پیدا می کنند و ماشین مجازی در هر زمان صرفا تصویر یکی از کارکردها را اجرا می‌کند.
@@ -70,16 +70,11 @@
 اگر در طول زمان انتساب کارکردها به ماشین مجازی نیز تغییر کند، این مسئله با مسئله تخصیص منابع ترکیب می شود.
 در این رساله ما صرفا بر استقرار سرویس و تخصیص منابع تمرکز خواهیم کرد و در آن بحث اشتراک نمونه را نیز مدنظر قرار خواهیم داد.
 
+\قسمت{مسائل مدیریت شبکه و سرویس‌های بدون لمس}
+
 \پاراگراف{}
 در بحث مدیریت شبکه و سرویس بدون لمس، می‌توان مسائل مختلفی مطرح کرد که در آن‌ها هدف پیش‌بینی و تصمیم‌گیری‌ها خودکار می‌باشد. از جمله‌ی این مسائل می‌توان به پیش‌بینی ترافیک اشاره کرد.
 برای مدیریت شبکه حجم ترافیک یکی از پارامترهای مهم می‌باشد که پیش‌بینی آن می‌تواند کمک شایانی به تصمیم‌گیری‌های آینده انجام دهد.
-
-\قسمت{باید مشخص شود!}
-
-\پاراگراف{}
-مساله کیفیت سرویس در جایگذاری یا مهاجرت سرویس‌ها در محل‌هایی با منابع مشترک مانند مراکز داده‌ای بسیار حائر اهمیت است.
-
-\قسمت{مسائل حوزه هوش مصنوعی}
 
 \پاراگراف{}
 سال‌ها است که از تکنیک‌های هوش مصنوعی برای انجام عملیات‌های شبکه‌های آینده از مدیریت تا نگهداری و مراقب استفاده می‌شود. از تکنیک‌های یادگیری عمیق
