feat: add new reference.

--- a/problem/references.bib
+++ b/problem/references.bib
@@ -50,3 +50,17 @@
   title = {A New Traffic Prediction Algorithm to Software Defined Networking},
   journal = {Mobile Networks and Applications}
 }
+
+@article{Xu2020,
+  doi = {10.1145/3387705},
+  url = {https://doi.org/10.1145/3387705},
+  year = {2020},
+  month = aug,
+  publisher = {Association for Computing Machinery ({ACM})},
+  volume = {16},
+  number = {3},
+  pages = {1--27},
+  author = {Zichuan Xu and Zhiheng Zhang and Weifa Liang and Qiufen Xia and Omer Rana and Guowei Wu},
+  title = {{QoS}-Aware {VNF} Placement and Service Chaining for {IoT} Applications in Multi-Tier Mobile Edge Networks},
+  journal = {{ACM} Transactions on Sensor Networks}
+}
