--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -70,6 +70,16 @@
 اگر در طول زمان انتساب کارکردها به ماشین مجازی نیز تغییر کند، این مسئله با مسئله تخصیص منابع ترکیب می شود.
 در این رساله ما صرفا بر استقرار سرویس و تخصیص منابع تمرکز خواهیم کرد و در آن بحث اشتراک نمونه را نیز مدنظر قرار خواهیم داد.
 
+\قسمت{جایگذاری زنجیره‌های کارکرد سرویس با در نظر گرفتن نیازمندی‌های کیفیت سرویس}
+
+\پاراگراف{}
+\مرجع{Xu2020} در رابطه با جایگذاری کارکردهای سرویس در شبکه‌های حسگری اینترنت اشیا با هدف افزایش گذردهی بحث می‌کند. در اینجا فرض می‌شود هر کارکرد با توجه منابع تخصیص یافته نرخ پردازش بسته مشخصی بدست می‌آورد.
+در این پژوهش هر تقاضا برای پردازش حجم مشخصی از داده است و این زنجیره‌ای برای آن تشکیل می‌شود. معماری در اینجا به دو لایه مرکز داده‌ای و \متن‌لاتین{cloudlet} تقسیم می‌شود که در آن منابع مرکز داده‌ای بیشتر
+و در عین حال منابع \متن‌لاتین{cloudlet}ها محدودتر است. تاخیر از حسگر تا \متن‌لاتین{cloudlet} کمتر از تاخیر تا مرکز داده‌ای می‌باشد. در این پژوهش فرض شده است مرکز داده‌ای کارکردها را بعد از پردازش
+در خواست برای درخواست‌های بعدی نگه می‌دارد اما با توجه به منابع محدود این امر برای \متن‌لاتین{cloudlet}ها ممکن نیست.
+در نهایت آنچه در این پروژه اهمیت دارد پذیرش و انجام درخواست‌ها در بازه زمانی مشخص شده توسط آن‌ها است در حالی که هر قراردهی و نمونه‌سازی خود هزینه‌ای را نیز در بر دارد.
+
+
 \قسمت{مسائل مدیریت شبکه و سرویس‌های بدون لمس}
 
 \پاراگراف{}
