feat: update related works

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -78,6 +78,7 @@
 و در عین حال منابع \متن‌لاتین{cloudlet}ها محدودتر است. تاخیر از حسگر تا \متن‌لاتین{cloudlet} کمتر از تاخیر تا مرکز داده‌ای می‌باشد. در این پژوهش فرض شده است مرکز داده‌ای کارکردها را بعد از پردازش
 در خواست برای درخواست‌های بعدی نگه می‌دارد اما با توجه به منابع محدود این امر برای \متن‌لاتین{cloudlet}ها ممکن نیست.
 در نهایت آنچه در این پروژه اهمیت دارد پذیرش و انجام درخواست‌ها در بازه زمانی مشخص شده توسط آن‌ها است در حالی که هر قراردهی و نمونه‌سازی خود هزینه‌ای را نیز در بر دارد.
+درخواست‌ها از پیش مشخص بوده و مساله زمان‌بندی و پذیرش این درخواست‌ها با هدف افزایش گذردهی و کاهش هزینه‌ها است.
 
 
 \قسمت{مسائل مدیریت شبکه و سرویس‌های بدون لمس}
