feat: add new paper summary.

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -80,6 +80,10 @@
 در نهایت آنچه در این پروژه اهمیت دارد پذیرش و انجام درخواست‌ها در بازه زمانی مشخص شده توسط آن‌ها است در حالی که هر قراردهی و نمونه‌سازی خود هزینه‌ای را نیز در بر دارد.
 درخواست‌ها از پیش مشخص بوده و مساله زمان‌بندی و پذیرش این درخواست‌ها با هدف افزایش گذردهی و کاهش هزینه‌ها است.
 
+\پاراگراف{}
+یکی از مباحث کیفیت سرویس بحث قابلیت اطمینان می‌باشد. در \مرجع{1711.08417} تلاش شده است با در نظر گرفتن نمونه‌های موازی در جایگذاری قابلیت اطمینان افزایش پیدا کند. برای این امر زنجیره‌ها به تعدادی زیر زنجیره شکسته می‌شوند
+و در ادامه آن با در نظر گرفتن نمونه‌های موازی قابلیت اطمینان در صورت وقوع خطا افزایش می‌یابد. این زیر زنجیره‌ها به صورت توزیع شده جایگذاری می‌شوند در صورت بروز خطا وابستگی کمتری به یکدیگر داشته باشند.
+
 
 \قسمت{مسائل مدیریت شبکه و سرویس‌های بدون لمس}
 
