--- a/problem/references.bib
+++ b/problem/references.bib
@@ -64,3 +64,10 @@
   title = {{QoS}-Aware {VNF} Placement and Service Chaining for {IoT} Applications in Multi-Tier Mobile Edge Networks},
   journal = {{ACM} Transactions on Sensor Networks}
 }
+
+@misc{1711.08417,
+Author = {Anna Engelmann and Admela Jukan},
+Title = {A Reliability Study of Parallelized VNF Chaining},
+Year = {2017},
+Eprint = {arXiv:1711.08417},
+}
