feat: add new paper.

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -84,6 +84,10 @@
 یکی از مباحث کیفیت سرویس بحث قابلیت اطمینان می‌باشد. در \مرجع{1711.08417} تلاش شده است با در نظر گرفتن نمونه‌های موازی در جایگذاری قابلیت اطمینان افزایش پیدا کند. برای این امر زنجیره‌ها به تعدادی زیر زنجیره شکسته می‌شوند
 و در ادامه آن با در نظر گرفتن نمونه‌های موازی قابلیت اطمینان در صورت وقوع خطا افزایش می‌یابد. این زیر زنجیره‌ها به صورت توزیع شده جایگذاری می‌شوند در صورت بروز خطا وابستگی کمتری به یکدیگر داشته باشند.
 
+\پاراگراف{}
+در \مرجع{Fang2020} پژوهشگران دو مدل محافظت از تمام زنجیره و محافظت از یک نود را پیشنهاد داده‌اند. در ادامه این مسائل را با هدف کاهش مصرف منابع در قالب بهینه‌سازی صحیح مطرح و با توجه به پیچیدگی زمانی راه‌حل از روش‌های
+ابتکاری برای حل در زمان معقول استفاده کرده‌اند.
+
 
 \قسمت{مسائل مدیریت شبکه و سرویس‌های بدون لمس}
 
