--- a/problem/references.bib
+++ b/problem/references.bib
@@ -71,3 +71,16 @@ Title = {A Reliability Study of Parallelized VNF Chaining},
 Year = {2017},
 Eprint = {arXiv:1711.08417},
 }
+
+@article{Fang2020,
+  doi = {10.1016/j.jnca.2020.102536},
+  url = {https://doi.org/10.1016/j.jnca.2020.102536},
+  year = {2020},
+  month = mar,
+  publisher = {Elsevier {BV}},
+  volume = {154},
+  pages = {102536},
+  author = {Lang Fang and Xiaoning Zhang and Keshav Sood and Yunqing Wang and Shui Yu},
+  title = {Reliability-aware virtual network function placement in carrier networks},
+  journal = {Journal of Network and Computer Applications}
+}
