feat: update related works.

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -88,6 +88,9 @@
 در \مرجع{Fang2020} پژوهشگران دو مدل محافظت از تمام زنجیره و محافظت از یک نود را پیشنهاد داده‌اند. در ادامه این مسائل را با هدف کاهش مصرف منابع در قالب بهینه‌سازی صحیح مطرح و با توجه به پیچیدگی زمانی راه‌حل از روش‌های
 ابتکاری برای حل در زمان معقول استفاده کرده‌اند.
 
+\پاراگراف{}
+در \مرجع{Li2021} بحث زمان‌بندی \متن‌لاتین{VNF}ها مطرح شده است که در آن به صورت دوره‌ای زمان‌بندی و پردازش بسته‌ها صورت می‌گیرد. این مساله به صورت یک مساله بهینه‌سازی صحیح فرمول‌بندی شده است و در ادامه برای حل آن در زمان معقول
+از روش یادگیری تقویتی استفاده شده است. زنجیره‌های ورودی به دو دسته سرویس‌های داده‌ای با تاخیر غیر سخت‌گیرانه و سرویس‌های تایپ ماشین با تاخیر سخت‌گیرانه تقسیم می‌شوند.
 
 \قسمت{مسائل مدیریت شبکه و سرویس‌های بدون لمس}
 
