--- a/problem/references.bib
+++ b/problem/references.bib
@@ -84,3 +84,17 @@ Eprint = {arXiv:1711.08417},
   title = {Reliability-aware virtual network function placement in carrier networks},
   journal = {Journal of Network and Computer Applications}
 }
+
+@article{Li2021,
+  doi = {10.1109/tccn.2020.2988908},
+  url = {https://doi.org/10.1109/tccn.2020.2988908},
+  year = {2021},
+  month = mar,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {7},
+  number = {1},
+  pages = {304--318},
+  author = {Junling Li and Weisen Shi and Ning Zhang and Xuemin Shen},
+  title = {Delay-Aware {VNF} Scheduling: A Reinforcement Learning Approach With Variable Action Set},
+  journal = {{IEEE} Transactions on Cognitive Communications and Networking}
+}
