feat: update related works.

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -73,12 +73,18 @@
 \قسمت{جایگذاری زنجیره‌های کارکرد سرویس با در نظر گرفتن نیازمندی‌های کیفیت سرویس}
 
 \پاراگراف{}
+نیازمندی‌های کنترل سرویس شامل بحث‌هایی مانند تاخیر، قابلیت اطمینان و \نقاط‌خ می‌باشد که در مقالات این حوزه به یک یا تعدادی از آن‌ها پرداخته شده است. در ادامه این مقالات را مرور می‌کنیم.
+
+\پاراگراف{}
 \مرجع{Xu2020} در رابطه با جایگذاری کارکردهای سرویس در شبکه‌های حسگری اینترنت اشیا با هدف افزایش گذردهی بحث می‌کند. در اینجا فرض می‌شود هر کارکرد با توجه منابع تخصیص یافته نرخ پردازش بسته مشخصی بدست می‌آورد.
 در این پژوهش هر تقاضا برای پردازش حجم مشخصی از داده است و این زنجیره‌ای برای آن تشکیل می‌شود. معماری در اینجا به دو لایه مرکز داده‌ای و \متن‌لاتین{cloudlet} تقسیم می‌شود که در آن منابع مرکز داده‌ای بیشتر
 و در عین حال منابع \متن‌لاتین{cloudlet}ها محدودتر است. تاخیر از حسگر تا \متن‌لاتین{cloudlet} کمتر از تاخیر تا مرکز داده‌ای می‌باشد. در این پژوهش فرض شده است مرکز داده‌ای کارکردها را بعد از پردازش
 در خواست برای درخواست‌های بعدی نگه می‌دارد اما با توجه به منابع محدود این امر برای \متن‌لاتین{cloudlet}ها ممکن نیست.
 در نهایت آنچه در این پروژه اهمیت دارد پذیرش و انجام درخواست‌ها در بازه زمانی مشخص شده توسط آن‌ها است در حالی که هر قراردهی و نمونه‌سازی خود هزینه‌ای را نیز در بر دارد.
 درخواست‌ها از پیش مشخص بوده و مساله زمان‌بندی و پذیرش این درخواست‌ها با هدف افزایش گذردهی و کاهش هزینه‌ها است.
+
+\پاراگراف{}
+در مرجع{1711.08965} بحث قابلیت اطمینان با تکرار نمونه‌ها و مهاجرت آن‌ها انجام می‌شود. در مهاجرت هدف جابجایی نمونه‌ها به سرورهایی با اطمینان بیشتر است که باعث کاهش هزینه‌ها می‌شود.
 
 \پاراگراف{}
 یکی از مباحث کیفیت سرویس بحث قابلیت اطمینان می‌باشد. در \مرجع{1711.08417} تلاش شده است با در نظر گرفتن نمونه‌های موازی در جایگذاری قابلیت اطمینان افزایش پیدا کند. برای این امر زنجیره‌ها به تعدادی زیر زنجیره شکسته می‌شوند
