--- a/problem/references.bib
+++ b/problem/references.bib
@@ -98,3 +98,10 @@ Eprint = {arXiv:1711.08417},
   title = {Delay-Aware {VNF} Scheduling: A Reinforcement Learning Approach With Variable Action Set},
   journal = {{IEEE} Transactions on Cognitive Communications and Networking}
 }
+
+@misc{1711.08965,
+  Author = {Francisco Carpio and Admela Jukan},
+  Title = {Improving Reliability of Service Function Chains with Combined VNF Migrations and Replications},
+  Year = {2017},
+  Eprint = {arXiv:1711.08965},
+}
