feat: update related works.

--- a/problem/literature.tex
+++ b/problem/literature.tex
@@ -85,6 +85,9 @@
 
 \پاراگراف{}
 در مرجع{1711.08965} بحث قابلیت اطمینان با تکرار نمونه‌ها و مهاجرت آن‌ها انجام می‌شود. در مهاجرت هدف جابجایی نمونه‌ها به سرورهایی با اطمینان بیشتر است که باعث کاهش هزینه‌ها می‌شود.
+قابلیت اطمینان برای زنجیره‌ها از حاصل ضرب قابلیت اطمینان نمونه‌ها محاسبه می‌شود و با فراهم آوردن زنجیره‌های فعال این قابلیت اطمینان افزایش پیدا می‌کند.
+در نظر داشته باشید که قابلیت اطمینان یک نمونه از قابلیت اطمینان سروری که بر روی آن اجرا می‌شود بدست می‌آید.
+در نهایت این پژوهش از برنامه‌ریزی خطی برای مدل‌سازی مساله استفاده می‌کند و برای حل آن در زمان معقول راه‌حل ابتکاری پیشنهاد می‌دهد.
 
 \پاراگراف{}
 یکی از مباحث کیفیت سرویس بحث قابلیت اطمینان می‌باشد. در \مرجع{1711.08417} تلاش شده است با در نظر گرفتن نمونه‌های موازی در جایگذاری قابلیت اطمینان افزایش پیدا کند. برای این امر زنجیره‌ها به تعدادی زیر زنجیره شکسته می‌شوند
