feat: improve problem description

--- a/problem/problem.tex
+++ b/problem/problem.tex
@@ -16,7 +16,7 @@
 بنابراین یکی از بحث‌های مهم در شبکه‌های \متن‌لاتین{6G} پرداختن به همین بحث تاخیر و سرویس‌های با تاخیر کم می‌باشد.
 
 مساله‌ی اول بحث کیفیت سرویس برای جایگذاری سرویس‌های قطعی در زیر ساخت مجازی‌سازی کارکردهای شبکه است و مساله‌ی دوم بحث بازجایگذاری سرویس‌ها بعد از مانیتور کردن آن‌ها در یک بازه زمانی مشخص است.
-در مساله‌ی دوم هدف بهبود جایگذری صورت گرفته در مساله اول خواهد بود.
+در مساله‌ی دوم هدف بهبود جایگذری صورت گرفته در مساله اول خواهد بود و پارامتر مورد توجه ترافیک زنجیره می‌باشد. با پیش‌بینی ترافیک زنجیره بر پایه اطلاعات جمع‌آوری شده می‌توان باز جایگذاری بهتری داشت.
 
 \پاراگراف{}
 در مساله اول که بحث جایگذاری مطرح است نیاز داریم در ابتدا ساختار آنچه که میخواهیم جایگذاری کنیم را مشخص کنیم. این جایگذاری می‌تواند بر پایه \متن‌لاتین{SFC} از استاندارد \متن‌لاتین{IETF} یا \متن‌لاتین{VNF-FG} از \متن‌لاتین{ETSI} باشد.
