feat: update problem description.

--- a/problem/problem.tex
+++ b/problem/problem.tex
@@ -25,7 +25,7 @@
 در بحث جایگذاری مورد مهم دیگر در رابطه با زیرساخت جایگذاری می‌باشد. زیرساخت می‌تواند برای سرویس‌های مختلف پارامترهای کیفیت سرویس گوناگونی ارائه دهد. به طور مثال می‌توان دو مرکز داده‌ای در نظر گرفت که در کنار جایگذاری نیاز به انتخاب مرکز داده‌ای نیز به وجود می‌آورد.
 در اینجا بحث کیفیت سرویس نیز مطرح است. برای بحث کیفیت سرویس نیاز داریم تاخیر سرویس‌ها را در قالب ریاضی فرمول‌بندی کنیم و از این رو بحث \متن‌لاتین{Network Calculus} به ما برای بیان شرایط حدی کمک می‌کند.
 مقالات در این حوزه عموما یک رابطه ساده برای منحنی سرویس و منحنی ورود سرویس‌ها، در نظر می‌گیرند و با مفهوم پیچش آن‌ها را به تمام سرویس تعمیم می‌دهند. مقالات کمی در حوزه بهره‌گیری از \متن‌لاتین{Network Calculus} عمیق‌تر از این عمل کرده بودند که عمدتا هم حوزه‌ی آن‌ها بحث‌های \متن‌لاتین{TE} می‌باشد.
-در این مرحله می‌توان یک مساله‌ی بهینه‌سازی صحیح مطرح و از روش‌های گوناگون برای حل آن بهره برد. یکی از این روش‌ها استفاده از \متن‌لاتین{Quantum computing} می‌باشد. در عین حال می‌شود از روش‌های یادگیری تقویتی هم بهره جست.
+در نهایت می‌توان مساله‌ی بهینه‌سازی مطرح شده را با استفاده از روش یادگیری تقویتی در زمان معقول حل کرد.
 
 \پاراگراف{}
 در مساله دوم قصد داریم سرویس‌های جایگذاری شده را بعد از یک بازه زمانی دوباره جایگذاری کنیم اما بحث اصلی در این رابطه استفاده از پیش‌بینی ترافیک لینک‌ها است.
