fix: correct latin usage.

--- a/problem/problem.tex
+++ b/problem/problem.tex
@@ -32,4 +32,4 @@
 در واقع متقاضیان سرویس هرگز در رابطه با ترافیک دقیق سیستمشان اطلاعی ندارد. در پیش‌بینی ترافیک دو بحث معیار مطرح است یکی ساختار مکانی و دیگری زمان می‌باشد.
 برای حل این مساله نیاز است این دو معیار توامان مدنظر قرار گرفته شوند و از این رو از بحث \متن‌لاتین{Spectral Graphs} و \نقاط‌خ استفاده می‌کنیم.
 در این مساله نیاز به بحث‌های یادگیری ماشین نیز وجود دارد. در واقع در این مساله سعی خواهیم با استفاده از یک سری زمانی از اطلاعات که از شبکه بدست آمده است حجم ترافیک لینک‌ها را پیش‌بینی کنیم.
-در صورتی که برای سرویس‌ها از VNF-FG استفاده کنیم در این مرحله کار سخت‌تری برای پیش‌بینی ترافیک خواهیم داشت.
+در صورتی که برای سرویس‌ها از \متن‌لاتین{VNF-FG} استفاده کنیم در این مرحله کار سخت‌تری برای پیش‌بینی ترافیک خواهیم داشت.
