feat: update concepts for gpu sharing.

--- a/problem/concepts.tex
+++ b/problem/concepts.tex
@@ -530,6 +530,16 @@ VNF-FG
 خودکارسازی کامل تمرکز دارد، \متن‌لاتین{ENI} بر تکنیک‌های هوش مصنوعی، مدیریت سیاست‌‌ها
 و مکانیزم‌های حلقه بسته تمرکز دارد.
 
+\قسمت{اشتراک گذاری \متن‌لاتین{GPU}}
+
+\زیرقسمت{مقدمه}
+امروزه استفاده از \متن‌لاتین{GPU} برای افزایش سرعت پردازش امری اجتناب ناپذیر است. کارکردهای شبکه مبتنی بر \متن‌لاتین{GPU} مانند \متن‌لاتین{router} و \نقاط‌خ وجود داشته و فراهم آورندگان ابری مانند علی‌بابا یا \متن‌لاتین{Amazon} زیرساخت‌هایی با \متن‌لاتین{GPU}
+در اختیار کاربران قرار می‌دهند.
+
+\زیرقسمت{اشتراک‌گذاری}
+زمانی که یک کارت \متن‌لاتین{GPU} به صورت کامل در اختیار یک زنجیره قرار می‌گیرد مصرف آن بهینه نخواهد بود بنابراین بحث اشتراک‌گذاری زمانی مطرح است. در اشتراک‌گذاری زمانی تاخیر افزایش پیدا می‌کند و لزوما بهره‌وری بیشتری بدست نمیاید.
+در نهایت یکی از راه‌حل‌های بهینه استفاده از اشتراک‌گذاری مکانی مطرح شده در \مرجع{211297} می‌باشد.
+
 \قسمت{نتیجه‌گیری}
 
 \پاراگراف{}
