--- a/problem/references.bib
+++ b/problem/references.bib
@@ -105,3 +105,16 @@ Eprint = {arXiv:1711.08417},
   Year = {2017},
   Eprint = {arXiv:1711.08965},
 }
+
+@inproceedings {211297,
+author = {Kai Zhang and Bingsheng He and Jiayu Hu and Zeke Wang and Bei Hua and Jiayi Meng and Lishan Yang},
+title = {G-NET: Effective {GPU} Sharing in {NFV} Systems},
+booktitle = {15th {USENIX} Symposium on Networked Systems Design and Implementation ({NSDI} 18)},
+year = {2018},
+isbn = {978-1-939133-01-4},
+address = {Renton, WA},
+pages = {187--200},
+url = {https://www.usenix.org/conference/nsdi18/presentation/zhang-kai},
+publisher = {{USENIX} Association},
+month = apr,
+}
